fix(ToggleButton): align label position (#3169)

--- a/packages/dnb-eufemia/src/components/toggle-button/style/dnb-toggle-button.scss
+++ b/packages/dnb-eufemia/src/components/toggle-button/style/dnb-toggle-button.scss
@@ -155,17 +155,11 @@
     }
 
     .dnb-flex-container {
-      &--vertical-label {
-        align-items: flex-start;
-      }
+      margin-bottom: calc(var(--toggle-button-group-margin-bottom) * -1);
 
-      margin-bottom: calc(
-        1px - 1px - var(--toggle-button-group-margin-bottom)
-      );
-
-      &::before {
-        // move the group 2px up if label exists
-        font-size: var(--font-size-basis);
+      &--direction-horizontal .dnb-form-label {
+        margin-top: 0.5rem;
+        align-self: flex-start;
       }
     }
 
